# tplcc

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  todo
tcc/: CMakeLists.txt  Lexer.cpp  Lexer.h  tcc.cpp
tests/: CMakeLists.txt  Test_Lexer.cpp  test-encoding-cursor.cpp  test-lexer.cpp  test-preprocessing-lexer.cpp  test-preprocessor.cpp  test-scanner.cpp
tests/mocking/: report-error-stub.h  simple-string-scanner.cpp  simple-string-scanner.h
tests/utils/: helpers.cpp  helpers.h
tplcc/: CMakeLists.txt  Lexer.cpp  Lexer.h  code-buffer.cpp  code-buffer.h  cursor.h  encoding-cursor.cpp  encoding-cursor.h  encoding.cpp  encoding.h  error-reporter.h  error-reporting.h  error.h  helper.h  lexer.cpp  lexer.h  pp-scanner.h  pp.h  preprocessing-lexer.h  preprocessor.cpp  preprocessor.h  scanner.cpp  scanner.h  tplcc.cpp  tplcc.h
